[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urirun-connectors-toolkit"
version = "0.1.0"
description = "Connector authoring toolkit for urirun: SDK, lint, scaffold, smoke, catalog, declarative spec"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "if-uri" }]
dependencies = [
  "urirun>=0.4.14",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.urls]
Repository = "https://github.com/if-uri/urirun-connectors-toolkit"

[tool.setuptools.packages.find]
where = ["."]
include = ["urirun_connectors_toolkit*"]
