[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urirun-connectors-toolkit"
version = "0.2.0"
description = "Meta-package: connector authoring toolkit for urirun (SDK, lint, scaffold, smoke, catalog, declarative spec). The `urirun_connectors_toolkit` import package now ships inside the `urirun` distribution (the single source of truth); this distribution just depends on it so `pip install urirun-connectors-toolkit` and `import urirun_connectors_toolkit` keep working."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "if-uri" }]
# Meta-package: ships NO import package of its own (the bundled `urirun` owns
# `urirun_connectors_toolkit`), so installing this alongside `urirun` cannot shadow the bundle copy.
dependencies = [
  "urirun>=0.4.190",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.urls]
Repository = "https://github.com/if-uri/urirun-connectors-toolkit"

[tool.setuptools]
packages = []                # meta-package — no import package shipped
